Maintaining default background item colour when selected but overflowed, as specified in issue #51

--- a/sass/px-app-nav-item.scss
+++ b/sass/px-app-nav-item.scss
@@ -110,6 +110,11 @@ $px-app-nav-item-background-color--collapsed: var(--px-app-nav-item-background-c
   width: $px-app-nav-item-stripe-size--selected;
 }
 
+/* Item State: Selected+Overflowed */
+:host([selected][overflowed]) {
+  background-color: $px-app-nav-item-background-color;
+}
+
 /* Item State: Empty */
 $px-app-nav-item-background-color--empty: var(--px-app-nav-item-background-color--empty, lightgray);
 
